# diffa

./: LICENSE  README.md  pyproject.toml
.github/workflows/: e2e_tests.yaml  release.yaml
diffa/: __init__.py  diffa.py
diffa/static/: line_highlight.js
diffa/templates/: basic_style.css  basic_template.html  inline_template.html  sbs_template.html
tests/: test_end2end.py
tests/data/: file1.txt  file2.txt  tmp.out.html
