[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools"] # REQUIRED if [build-system] table is used
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.


[project]
name = "diffa"
version = "0.0.2"
description = "A very simple python package for creating a HTML line diff between two files."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["sample", "setuptools", "development"]
authors = [{ name = "Tom Carter", email = "tomcarter017@gmail.com" }]
maintainers = [
  { name = "Tom Carter", email = "tomcarter017@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/tomcarter23/diffa"
Issues = "https://github.com/tomcarter23/diffa/issues"

[tool.setuptools]
packages = ['diffa']

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
diffa = "diffa.diffa:main"
